# lexer-parser

./: .gitignore  pyproject.toml  readme.md
src/: main.py
src/forth/: grammar.bnf  lexer.py  main.py  parser.py  tokens.py
src/forth/lexer/: lexer.py  tokens.py
src/forth/parse/: gen.py  nodes.py  parser.gen.py  parser.py
src/lib/: automata.py  lexer.py  token.py  tokens.py  tstream.py
src/lib/automata/: automata.py  state.py
src/lib/bnf/: bnf.py
src/lib/lexer/: lexer.py  tokens.py  tstream.py
src/lib/parser/: combinator.py  models.py  parser.py  transformer.py  utils.py
src/lplib/automata/: automata.py
src/lplib/bnf/: bnf.py
src/lplib/lexer/: lexer.py  tokens.py  tstream.py
src/lplib/parser/: combinator.py  models.py  transformer.py  utils.py
