[tool.poetry]
name = "cpulplib"
version = "1.5.5"
description = ""
authors = ["BardinPetr <bardin.petr@gmail.com>"]
readme = "readme.md"
packages = [
    { include = "forth", from = "src" },
    { include = "lplib", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
